// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test K8sDeleteStep Validate timeout is min 10s with manifestPaths 1`] = `
Object {
  "identifier": "K8sDeleteStepID",
  "name": "K8sDeleteStep",
  "spec": Object {
    "deleteResources": Object {
      "spec": Object {
        "manifestPaths": Array [
          undefined,
          undefined,
        ],
      },
      "type": "ManifestPath",
    },
  },
  "timeout": "1s",
  "type": "K8sDelete",
}
`;

exports[`Test K8sDeleteStep Validate timeout is min 10s with manifestPaths 2`] = `Object {}`;

exports[`Test K8sDeleteStep Validate timeout is min 10s with manifestPaths runtime 1`] = `
Object {
  "identifier": "K8sDeleteStepID",
  "name": "K8sDeleteStep",
  "spec": Object {
    "deleteResources": Object {
      "spec": Object {
        "manifestPaths": "<+input>",
      },
      "type": "ManifestPath",
    },
  },
  "timeout": "<+input>",
  "type": "K8sDelete",
}
`;

exports[`Test K8sDeleteStep Validate timeout is min 10s with manifestPaths runtime 2`] = `
Object {
  "spec": Object {
    "deleteResources": Object {
      "spec": Object {
        "manifestPaths": "spec.deleteResources.spec.manifestPaths is a required field",
      },
    },
  },
  "timeout": "Value must be greater than or equal to \\"10s\\"",
}
`;

exports[`Test K8sDeleteStep Validate timeout is min 10s with resourceNames 1`] = `
Object {
  "identifier": "K8sDeleteStepID",
  "name": "K8sDeleteStep",
  "spec": Object {
    "deleteResources": Object {
      "spec": Object {
        "resourceNames": Array [
          undefined,
          undefined,
        ],
      },
      "type": "ResourceName",
    },
  },
  "timeout": "1s",
  "type": "K8sDelete",
}
`;

exports[`Test K8sDeleteStep Validate timeout is min 10s with resourceNames 2`] = `Object {}`;

exports[`Test K8sDeleteStep Validate timeout is min 10s with resourceNames as runtime 1`] = `
Object {
  "identifier": "K8sDeleteStepID",
  "name": "K8sDeleteStep",
  "spec": Object {
    "deleteResources": Object {
      "spec": Object {
        "resourceNames": "<+input>",
      },
      "type": "ResourceName",
    },
  },
  "timeout": "<+input>",
  "type": "K8sDelete",
}
`;

exports[`Test K8sDeleteStep Validate timeout is min 10s with resourceNames as runtime 2`] = `
Object {
  "spec": Object {
    "deleteResources": Object {
      "spec": Object {
        "resourceNames": "spec.deleteResources.spec.resourceNames is a required field",
      },
    },
  },
  "timeout": "Value must be greater than or equal to \\"10s\\"",
}
`;

exports[`Test K8sDeleteStep should render edit view -with ManifestPaths selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="k8DeleteData_identifier"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Id
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                >
                  Test_A
                </span>
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                placeholder="pipeline.stepNamePlaceholder"
                type="text"
                value="Test A"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center;"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="12m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.type"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="k8DeleteData_spec.deleteResources.type"
          >
            pipelineSteps.deleteResourcesBy
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.resourceNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                auditTrail.resourceNameLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.manifestPathValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.manifestPathLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.releaseNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.releaseNameLabel
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sDeleteStep should render edit view -with ReleaseName selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="k8DeleteData_identifier"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Id
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                >
                  Test_A
                </span>
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                placeholder="pipeline.stepNamePlaceholder"
                type="text"
                value="Test A"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center;"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="12m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.type"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="k8DeleteData_spec.deleteResources.type"
          >
            pipelineSteps.deleteResourcesBy
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.resourceNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                auditTrail.resourceNameLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.manifestPathValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.manifestPathLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.releaseNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.releaseNameLabel
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--intent-warning StyledProps--padding-left-small StyledProps--font-align-center StyledProps--flex StyledProps--flex-justifyContent-flex-start"
      id="warning-deletenamespace"
    >
      <span
        class="bp3-icon StyledProps--main StyledProps--intent-danger StyledProps--margin-right-small"
        data-icon="warning-icon"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 32 32"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M16 28.988c-7.179 0-13-5.82-13-13s5.821-13 13-13c7.18 0 13 5.82 13 13s-5.82 13-13 13Zm1.501-6.493a1.5 1.5 0 1 0-3 0 1.5 1.5 0 0 0 3 0Zm-1.5-3.517a1 1 0 0 0 1-1V9.026a1 1 0 1 0-2 0v8.952a1 1 0 0 0 1 1Z"
            fill="#FF7B26"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16 27.988c-6.627 0-12-5.373-12-12 0-6.628 5.373-12 12-12 6.628 0 12 5.372 12 12 0 6.627-5.372 12-12 12Zm2.501-5.493a2.5 2.5 0 1 0-5 0 2.5 2.5 0 0 0 5 0Zm-2.5-2.517a2 2 0 0 0 2-2V9.026a2 2 0 1 0-4 0v8.952a2 2 0 0 0 2 2Zm-13-3.99c0 7.18 5.82 13 13 13s13-5.82 13-13-5.82-13-13-13-13 5.82-13 13Zm13 5.007a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm1-3.017a1 1 0 1 1-2 0V9.026a1 1 0 1 1 2 0v8.952Z"
            fill="#FF7B26"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <p
        class="StyledProps--font StyledProps--main StyledProps--font-variation-form-message-warning"
      >
        pipelineSteps.deleteNamespaceWarning
      </p>
    </div>
  </div>
</div>
`;

exports[`Test K8sDeleteStep should render edit view -with ResourceName selected 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="k8DeleteData_identifier"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Id
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                >
                  Test_A
                </span>
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                placeholder="pipeline.stepNamePlaceholder"
                type="text"
                value="Test A"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center;"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="12m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.type"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="k8DeleteData_spec.deleteResources.type"
          >
            pipelineSteps.deleteResourcesBy
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.resourceNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                auditTrail.resourceNameLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.manifestPathValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.manifestPathLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.releaseNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.releaseNameLabel
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sDeleteStep should render edit view as new step 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup lg"
    >
      <div
        class="InputWithIdentifier--txtNameContainer TextInput--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
        >
          <div
            class="Text--withDocsTooltip"
            data-tooltip-id="k8DeleteData_identifier"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              Id
            </p>
          </div>
          <p
            class="StyledProps--font StyledProps--main"
          >
            :
          </p>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <div
                class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                tabindex="0"
              >
                <span
                  class="bp3-editable-text-content"
                  style="height: 1px; line-height: 1px; min-width: 0;"
                />
              </div>
            </span>
          </span>
          <span
            class="bp3-icon StyledProps--main"
            data-icon="Edit"
            style="vertical-align: middle; cursor: pointer;"
          >
            <svg
              height="12"
              viewBox="0 0 16 16"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M11.207.485a.5.5 0 0 1 .354-.146 3.5 3.5 0 0 1 3.5 3.5.5.5 0 0 1-.146.353l-11 11a.5.5 0 0 1-.354.147h-3a.5.5 0 0 1-.5-.5v-3a.5.5 0 0 1 .146-.354l11-11Zm.553.862L1.061 12.046v2.293h2.293l10.7-10.7a2.5 2.5 0 0 0-2.294-2.292Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
              <path
                clip-rule="evenodd"
                d="M11.89 2.646a.5.5 0 0 1 0 .708L8.353 6.889a.5.5 0 0 1-.708-.707l3.536-3.536a.5.5 0 0 1 .707 0Z"
                fill="currentColor"
                fill-rule="evenodd"
                opacity="0.3"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="name"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_name"
            >
              name
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="name"
                placeholder="pipeline.stepNamePlaceholder"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup sm"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center;"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="10m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.type"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="k8DeleteData_spec.deleteResources.type"
          >
            pipelineSteps.deleteResourcesBy
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.resourceNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                auditTrail.resourceNameLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  checked=""
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.manifestPathValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.manifestPathLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.releaseNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.releaseNameLabel
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.spec.manifestPaths"
        >
          <div
            class="formLabel"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_spec.deleteResources.spec.manifestPaths"
            >
              pipelineSteps.manifestPathLabel
            </span>
            <div
              class="bp3-popover-wrapper typeSelectorWrapper"
            >
              <div
                class="bp3-popover-target typeSelector"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    <span
                      class="bp3-icon StyledProps--main icon fixed"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--vertical StyledProps--main"
          >
            <div
              class="Layout--horizontal StyledProps--main"
            >
              <div
                class="bp3-form-group"
                style="width: 430px;"
              >
                
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                  >
                    <div
                      class="bp3-input-group MultiTypeInput--input"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="spec.deleteResources.spec.manifestPaths[0].value"
                        placeholder="pipelineSteps.manifestPathsPlaceHolder"
                        type="text"
                        value="test2"
                      />
                    </div>
                    <span
                      class="bp3-popover-wrapper MultiTypeInput--wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="MultiTypeInput--btn MultiTypeInput--FIXED"
                        >
                          <span
                            class="bp3-icon StyledProps--main"
                            data-icon="fixed-input"
                          >
                            <svg
                              height="12"
                              viewBox="0 0 9 9"
                              width="12"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </button>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-icon"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    viewBox="0 0 16 20"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                      opacity="0.3"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <span>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main addBtn Button--with-current-color Button--variation Button--variation-primary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  addFileText
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sDeleteStep should render null for StepviewType.template 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup sm"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
        style="align-items: center;"
      >
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="timeout"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="k8DeleteData_timeout"
            >
              pipelineSteps.timeoutLabel
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--horizontal StyledProps--main MultiTypeInput--main"
              style="flex-grow: 1;"
            >
              <div
                class="bp3-input-group bp3-fill"
              >
                <input
                  class="bp3-input"
                  name="timeout"
                  placeholder="Enter w/d/h/m/s/ms"
                  type="text"
                  value="10m"
                />
              </div>
              <span
                class="bp3-popover-wrapper MultiTypeInput--wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <button
                    class="MultiTypeInput--btn MultiTypeInput--FIXED"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="fixed-input"
                    >
                      <svg
                        height="12"
                        viewBox="0 0 9 9"
                        width="12"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </button>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="divider"
    />
    <div
      class="formGroup"
    >
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="spec.deleteResources.type"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="k8DeleteData_spec.deleteResources.type"
          >
            pipelineSteps.deleteResourcesBy
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="StyledProps--main"
          >
            
            <div
              class="RadioButtonGroup--inline"
            >
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.resourceNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                auditTrail.resourceNameLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.manifestPathValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.manifestPathLabel
              </label>
              <label
                class="RadioButton--radio StyledProps--main"
              >
                <input
                  class="RadioButton--input"
                  name="spec.deleteResources.type"
                  type="radio"
                  value="pipelineSteps.releaseNameValue"
                />
                <span
                  class="RadioButton--radioIcon"
                />
                pipelineSteps.releaseNameLabel
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test K8sDeleteStep should render variable view 1`] = `
<div>
  <div
    class="variablesListTable"
  />
</div>
`;

exports[`Test K8sDeleteStep validate input set in deployment form - only timeout is runtime: K8 delete step error in deploymentform if timeout not present 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="formGroup sm"
    >
      <div
        class="bp3-form-group bp3-intent-danger"
      >
        <label
          class="bp3-label"
          for="timeout"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="stepTestUtilForm_timeout"
          >
            pipelineSteps.timeoutLabel
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="Layout--horizontal StyledProps--main MultiTypeInput--main"
            style="flex-grow: 1;"
          >
            <div
              class="bp3-input-group bp3-fill"
            >
              <input
                class="bp3-input"
                name="timeout"
                placeholder="Enter w/d/h/m/s/ms"
                type="text"
                value=""
              />
            </div>
            <span
              class="bp3-popover-wrapper MultiTypeInput--wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="MultiTypeInput--btn MultiTypeInput--FIXED"
                >
                  <span
                    class="bp3-icon StyledProps--main"
                    data-icon="fixed-input"
                  >
                    <svg
                      height="12"
                      viewBox="0 0 9 9"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 0 1 .1-.29l1.43-1.42a.76.76 0 0 1 .28-.15c.39-.1 1 0 1.28-.29a.34.34 0 0 0 0-.51l-2.42-2.42a.33.33 0 0 0 -.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 0 1 -.13.23l-1.44 1.47a.29.29 0 0 1 -.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 0 0 0 .54.36.36 0 0 0 .54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
          </div>
          <div
            class="bp3-form-helper-text"
          >
            <div
              class="FormError--errorDiv"
              data-name="timeout"
            >
              <span
                class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                data-icon="circle-cross"
              >
                <svg
                  height="12"
                  viewBox="0 0 13 13"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="FormError--error"
              >
                validation.timeout10SecMinimum
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="StyledProps--font StyledProps--main"
    >
      Errors
    </p>
    <pre>
      {
  "timeout": "validation.timeout10SecMinimum"
}
    </pre>
    <button
      class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Submit
      </span>
    </button>
  </div>
</div>
`;
